k8s/environments/review/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
  - host: review.tracker.54.177.103.14.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: pal-tracker
            servicePort: 8080
